# gemma4-zml-probe

./: .env.example  .gitignore  PLANNING.md  README.md  requirements.txt
docs/: BATCHING_RESULTS.md  BATCH_BENCH_PROTOCOL.md  CARTOGRAPHIE_portage.md  DOCUMENTATION.md  ENGINE_LOG.md  G2_3_OP_SENSITIVITY.md  G2_BF16_FIDELITY.md  GENERATION_LONGUE_CHUNKING_DESIGN.md  GENERATION_LONGUE_DESIGN.md  GENERATION_LONGUE_PLAN.md  GEN_AUTONOME_DESIGN.md  GEN_AUTONOME_PLAN.md  GPU_PORT_PLAN.md  L3_INGRAPH_DESIGN.md  L3_INGRAPH_PLAN.md  P5_0_yoco_shared_kv_cartography.md  P5_1_yoco_policy_table.md  P5_2_attention_forward.md  P5_6_closeout.md  P5_7_5_precision_contract.md  P5_7_7_decode.md  ROADMAP_to_full_forward.md  SESSION_2026-06-27_RAPPORT.md  TURBOQUANT_ZML_DESIGN.md  TURBOQUANT_ZML_PLAN.md  TURBOQUANT_ZML_RESULTS.md  VRAM_CHECK_DESIGN.md  VRAM_CHECK_PLAN.md  ZML_MODULAR_ENGINE_DESIGN.md  ZML_MODULAR_ENGINE_PLAN.md  ZML_UPSTREAM_AUDIT_2026-07-12.md
docs/superpowers/plans/: 2026-07-10-g2-3-op-sensitivity.md  2026-07-12-batching-flash-attn.md
docs/superpowers/specs/: 2026-07-10-g2-3-op-sensitivity-design.md  2026-07-12-batching-flash-attn-design.md
fixtures/: batch_manifest.json  bench_prompts_b2.txt  bench_prompts_b4.txt  fixture_manifest.json  g2_2_manifest.json  g2_3_expected_converts.json  g2_3_manifest.json  g2_envelope_manifest.json  p5_2_d0_kv_oracle_layer13_manifest.json  p5_2_e1_qk_scores_layer15_kv13_manifest.json  p5_2_econtext_layer15_kv13_manifest.json  p5_2_emask_sliding_layer_synthetic_manifest.json  p5_2_esoftmax_layer15_kv13_manifest.json  p5_2_f_oproj_layer15_manifest.json  p5_2_g_attn_residual_layer15_manifest.json  p5_2_h_mlp_layer15_manifest.json  p5_3_layer13_manifest.json  p5_4_embed_manifest.json  p5_5_head_manifest.json  p5_6_full_qrope_layer14_manifest.json  p5_6k_full_krope_layer14_manifest.json  p5_7_0_loader_manifest.json  p5_7_3_runtime_plan.json  p5_7_4_full_layer14_manifest.json  p5_7_5_prefill_manifest.json  q_only_reader_layer15_manifest.json  yoco_policy_table.json
scripts/: 00_env_check.py  01_fetch_metadata.sh  02_contract_ple.py  03_ple_reference.py  04_run_all.sh  05_ple_raw_pytorch.py  06_export_ple_fixture.py  07_fixture_selfcheck.py  08_export_safetensors_fixture.py  09_yoco_config_map.py  10_yoco_weight_map.py  13_yoco_policy_table.py  14_kv_oracle_layer13.py  14_q_only_reader_oracle.py  15_p5_2_d1_export_fixture.py  16_p5_2_d2_export_fixture.py  17_p5_2_d3_export_fixture.py  18_p5_2_d4_export_fixture.py  19_p5_2_d5_export_fixture.py  20_p5_2_d2b_export_fixture.py  21_attention_oracle_layer15_reader_kv13.py  22_p5_2_e1_export_fixture.py  23_p5_2_emask_oracle.py  24_p5_2_esoftmax_export_fixture.py  25_p5_2_econtext_export_fixture.py  26_p5_2_f_oproj_oracle.py  27_p5_2_g_attn_residual_oracle.py  28_p5_2_h_mlp_oracle.py  29_p5_6_full_qrope_oracle.py  30_export_turboquant_constants.py  30_p5_4_embed_oracle.py  31_p5_5_head_oracle.py  31_vquant_oracle.py  32_decode_vq_oracle.py  32_p5_3_layer_oracle.py  33_gen_vq_measure.py  33_p5_6k_full_krope_oracle.py  34_p5_7_0_loader_manifest.py  35_p5_7_1_load_ref.py  36_p5_7_3_runtime_plan.py  (+26 more)
zml_runner/: BUILD.bazel  brick_turboquant.zig  deploy_to_3090.sh  engine.zig  gemma4_attn_resid.zig  gemma4_bbatch.zig  gemma4_bbs.zig  gemma4_bench.zig  gemma4_context.zig  gemma4_decode1.zig  gemma4_decode2.zig  gemma4_decode3.zig  gemma4_decode4.zig  gemma4_decode_vq.zig  gemma4_decprim.zig  gemma4_embed.zig  gemma4_engine_e1.zig  gemma4_engine_e2.zig  gemma4_full_krope.zig  gemma4_full_layer.zig  gemma4_full_qrope.zig  gemma4_g23_sweep.zig  gemma4_gchunk.zig  gemma4_gchunk_auto.zig  gemma4_gchunk_ring.zig  gemma4_gchunk_vacuity.zig  gemma4_gen_auto.zig  gemma4_gen_long.zig  gemma4_gen_long_gpu.zig  gemma4_gen_long_gpu_bf16.zig  gemma4_gen_vq.zig  gemma4_hadq.zig  gemma4_head.zig  gemma4_k_norm.zig  gemma4_k_proj.zig  gemma4_k_rope.zig  gemma4_kv_slot.zig  gemma4_layer.zig  gemma4_load_all.zig  gemma4_load_check.zig  (+18 more)
