load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "gemma4_ple_fixture",
    main = "gemma4_ple_fixture.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.A — policy lookup host-side, sans dependance ZML (pure std).
zig_binary(
    name = "gemma4_policy_lookup",
    main = "gemma4_policy_lookup.zig",
    visibility = ["//visibility:public"],
)

# P5.2.B — producer/read routing mock host-side, sans dependance ZML.
zig_binary(
    name = "gemma4_routing_mock",
    main = "gemma4_routing_mock.zig",
    visibility = ["//visibility:public"],
)

# P5.2.C.1 — ZML q_proj uniquement (reader layer 15 sliding).
zig_binary(
    name = "gemma4_q_proj",
    main = "gemma4_q_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.2 — ZML q_norm (q_proj + reshape + rmsNorm + mul), reader layer 15.
zig_binary(
    name = "gemma4_q_norm",
    main = "gemma4_q_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.3 — ZML RoPE Q-only (q_proj + q_norm + rope), reader layer 15 sliding.
zig_binary(
    name = "gemma4_q_rope",
    main = "gemma4_q_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.1 — ZML k_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_k_proj",
    main = "gemma4_k_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2 — ZML v_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_v_proj",
    main = "gemma4_v_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.3 — ZML k_norm (k_proj + reshape + rmsNorm + mul), producer layer 13.
zig_binary(
    name = "gemma4_k_norm",
    main = "gemma4_k_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.4 — ZML RoPE K-only (k_proj + k_norm + rope), producer layer 13 sliding.
zig_binary(
    name = "gemma4_k_rope",
    main = "gemma4_k_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.5 — ZML KV slot mock (K full + V proj + transpose to cache layout).
zig_binary(
    name = "gemma4_kv_slot",
    main = "gemma4_kv_slot.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2b — ZML v_norm (reshape + rmsNorm UNSCALED, no mul), producer layer 13.
zig_binary(
    name = "gemma4_v_norm",
    main = "gemma4_v_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.1 — ZML QK scores only (dot Q x K^T, GQA split, scaling 1.0, no mask/softmax).
zig_binary(
    name = "gemma4_qk_scores",
    main = "gemma4_qk_scores.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.mask — ZML sliding window mask réel (causalAttnMask window=3, S=8 mordant, add only).
zig_binary(
    name = "gemma4_sliding_mask",
    main = "gemma4_sliding_mask.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.softmax — ZML softmax only (scores_masked -> probs, axe .k, fp32, no context/V).
# Nom court volontaire (cf P5_2 doc) : un module plus long ("gemma4_attention_softmax")
# faisait déborder le quota comptime de 1000 backwards branches dans pjrt.zig (structSize
# scanne @typeName via std.mem.indexOf à l'instanciation de exe.call).
zig_binary(
    name = "gemma4_softmax",
    main = "gemma4_softmax.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)
