load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "gemma4_ple_fixture",
    main = "gemma4_ple_fixture.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.A — policy lookup host-side, sans dependance ZML (pure std).
zig_binary(
    name = "gemma4_policy_lookup",
    main = "gemma4_policy_lookup.zig",
    visibility = ["//visibility:public"],
)

# P5.2.B — producer/read routing mock host-side, sans dependance ZML.
zig_binary(
    name = "gemma4_routing_mock",
    main = "gemma4_routing_mock.zig",
    visibility = ["//visibility:public"],
)

# P5.2.C.1 — ZML q_proj uniquement (reader layer 15 sliding).
zig_binary(
    name = "gemma4_q_proj",
    main = "gemma4_q_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.2 — ZML q_norm (q_proj + reshape + rmsNorm + mul), reader layer 15.
zig_binary(
    name = "gemma4_q_norm",
    main = "gemma4_q_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.3 — ZML RoPE Q-only (q_proj + q_norm + rope), reader layer 15 sliding.
zig_binary(
    name = "gemma4_q_rope",
    main = "gemma4_q_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.1 — ZML k_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_k_proj",
    main = "gemma4_k_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2 — ZML v_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_v_proj",
    main = "gemma4_v_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.3 — ZML k_norm (k_proj + reshape + rmsNorm + mul), producer layer 13.
zig_binary(
    name = "gemma4_k_norm",
    main = "gemma4_k_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.4 — ZML RoPE K-only (k_proj + k_norm + rope), producer layer 13 sliding.
zig_binary(
    name = "gemma4_k_rope",
    main = "gemma4_k_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.5 — ZML KV slot mock (K full + V proj + transpose to cache layout).
zig_binary(
    name = "gemma4_kv_slot",
    main = "gemma4_kv_slot.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2b — ZML v_norm (reshape + rmsNorm UNSCALED, no mul), producer layer 13.
zig_binary(
    name = "gemma4_v_norm",
    main = "gemma4_v_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.1 — ZML QK scores only (dot Q x K^T, GQA split, scaling 1.0, no mask/softmax).
zig_binary(
    name = "gemma4_qk_scores",
    main = "gemma4_qk_scores.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.mask — ZML sliding window mask réel (causalAttnMask window=3, S=8 mordant, add only).
zig_binary(
    name = "gemma4_sliding_mask",
    main = "gemma4_sliding_mask.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.softmax — ZML softmax only (scores_masked -> probs, axe .k, fp32, no context/V).
# Nom court volontaire (cf P5_2 doc) : un module plus long ("gemma4_attention_softmax")
# faisait déborder le quota comptime de 1000 backwards branches dans pjrt.zig (structSize
# scanne @typeName via std.mem.indexOf à l'instanciation de exe.call).
zig_binary(
    name = "gemma4_softmax",
    main = "gemma4_softmax.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.context — ZML context dot (probs @ V, GQA split têtes Q, .k, no o_proj). Ferme P5.2.E.
# Nom court (gemma4_context, 14c) pour rester sous le quota comptime pjrt.zig (cf E.softmax).
zig_binary(
    name = "gemma4_context",
    main = "gemma4_context.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.F — ZML o_proj (projection sortie attention : concat têtes + nn.Linear 2048->1536).
zig_binary(
    name = "gemma4_oproj",
    main = "gemma4_oproj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.G — ZML post_attention_layernorm + résiduel (ferme la sous-couche attention).
zig_binary(
    name = "gemma4_attn_resid",
    main = "gemma4_attn_resid.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.H — ZML MLP feed-forward (double-wide 12288 ; gate/up + gelu_tanh + down + sandwich norms).
zig_binary(
    name = "gemma4_mlp",
    main = "gemma4_mlp.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.6 — ZML full_attention Q-rope manuelle partielle (layer 14, head_dim 512, rotate_half via split/neg/concat).
zig_binary(
    name = "gemma4_full_qrope",
    main = "gemma4_full_qrope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.4 — ZML embedding gather + scale sqrt(1536).
zig_binary(
    name = "gemma4_embed",
    main = "gemma4_embed.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.5 — ZML head (final norm + lm_head tied + softcap 30*tanh(x/30)).
zig_binary(
    name = "gemma4_head",
    main = "gemma4_head.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.3 — ZML couche décodeur sliding complète (layer 13 producer : attn + MLP + PLE block).
zig_binary(
    name = "gemma4_layer",
    main = "gemma4_layer.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)
