load("@rules_zig//zig:defs.bzl", "zig_binary")

zig_binary(
    name = "gemma4_ple_fixture",
    main = "gemma4_ple_fixture.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.A — policy lookup host-side, sans dependance ZML (pure std).
zig_binary(
    name = "gemma4_policy_lookup",
    main = "gemma4_policy_lookup.zig",
    visibility = ["//visibility:public"],
)

# P5.2.B — producer/read routing mock host-side, sans dependance ZML.
zig_binary(
    name = "gemma4_routing_mock",
    main = "gemma4_routing_mock.zig",
    visibility = ["//visibility:public"],
)

# P5.2.C.1 — ZML q_proj uniquement (reader layer 15 sliding).
zig_binary(
    name = "gemma4_q_proj",
    main = "gemma4_q_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.2 — ZML q_norm (q_proj + reshape + rmsNorm + mul), reader layer 15.
zig_binary(
    name = "gemma4_q_norm",
    main = "gemma4_q_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.C.3 — ZML RoPE Q-only (q_proj + q_norm + rope), reader layer 15 sliding.
zig_binary(
    name = "gemma4_q_rope",
    main = "gemma4_q_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.1 — ZML k_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_k_proj",
    main = "gemma4_k_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2 — ZML v_proj uniquement (producer layer 13 sliding, writer).
zig_binary(
    name = "gemma4_v_proj",
    main = "gemma4_v_proj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.3 — ZML k_norm (k_proj + reshape + rmsNorm + mul), producer layer 13.
zig_binary(
    name = "gemma4_k_norm",
    main = "gemma4_k_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.4 — ZML RoPE K-only (k_proj + k_norm + rope), producer layer 13 sliding.
zig_binary(
    name = "gemma4_k_rope",
    main = "gemma4_k_rope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.5 — ZML KV slot mock (K full + V proj + transpose to cache layout).
zig_binary(
    name = "gemma4_kv_slot",
    main = "gemma4_kv_slot.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.D.2b — ZML v_norm (reshape + rmsNorm UNSCALED, no mul), producer layer 13.
zig_binary(
    name = "gemma4_v_norm",
    main = "gemma4_v_norm.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.1 — ZML QK scores only (dot Q x K^T, GQA split, scaling 1.0, no mask/softmax).
zig_binary(
    name = "gemma4_qk_scores",
    main = "gemma4_qk_scores.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.mask — ZML sliding window mask réel (causalAttnMask window=3, S=8 mordant, add only).
zig_binary(
    name = "gemma4_sliding_mask",
    main = "gemma4_sliding_mask.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.softmax — ZML softmax only (scores_masked -> probs, axe .k, fp32, no context/V).
# Nom court volontaire (cf P5_2 doc) : un module plus long ("gemma4_attention_softmax")
# faisait déborder le quota comptime de 1000 backwards branches dans pjrt.zig (structSize
# scanne @typeName via std.mem.indexOf à l'instanciation de exe.call).
zig_binary(
    name = "gemma4_softmax",
    main = "gemma4_softmax.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.E.context — ZML context dot (probs @ V, GQA split têtes Q, .k, no o_proj). Ferme P5.2.E.
# Nom court (gemma4_context, 14c) pour rester sous le quota comptime pjrt.zig (cf E.softmax).
zig_binary(
    name = "gemma4_context",
    main = "gemma4_context.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.F — ZML o_proj (projection sortie attention : concat têtes + nn.Linear 2048->1536).
zig_binary(
    name = "gemma4_oproj",
    main = "gemma4_oproj.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.G — ZML post_attention_layernorm + résiduel (ferme la sous-couche attention).
zig_binary(
    name = "gemma4_attn_resid",
    main = "gemma4_attn_resid.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.2.H — ZML MLP feed-forward (double-wide 12288 ; gate/up + gelu_tanh + down + sandwich norms).
zig_binary(
    name = "gemma4_mlp",
    main = "gemma4_mlp.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.6 — ZML full_attention Q-rope manuelle partielle (layer 14, head_dim 512, rotate_half via split/neg/concat).
zig_binary(
    name = "gemma4_full_qrope",
    main = "gemma4_full_qrope.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.4 — ZML embedding gather + scale sqrt(1536).
zig_binary(
    name = "gemma4_embed",
    main = "gemma4_embed.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.5 — ZML head (final norm + lm_head tied + softcap 30*tanh(x/30)).
zig_binary(
    name = "gemma4_head",
    main = "gemma4_head.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# P5.3 — ZML couche décodeur sliding complète (layer 13 producer : attn + MLP + PLE block).
zig_binary(
    name = "gemma4_layer",
    main = "gemma4_layer.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.6.K — ZML full_attention K-rope manuelle partielle (layer 14, ferme gap K-full-rope).
zig_binary(
    name = "gemma4_full_krope",
    main = "gemma4_full_krope.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.1 — ZML chargement sélectif depuis le checkpoint réel bf16 (embed + 1 couche).
zig_binary(
    name = "gemma4_load_check",
    main = "gemma4_load_check.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.2 — ZML loader multi-couches (35 couches + embeddings, no compute).
zig_binary(
    name = "gemma4_load_all",
    main = "gemma4_load_all.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.4 — ZML couche FULL attention complète (layer 14, head_dim 512 + RoPE manuelle).
zig_binary(
    name = "gemma4_full_layer",
    main = "gemma4_full_layer.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.5 — ZML MOTEUR PREFILL 35 couches (forward complet : embed + PLE + dispatch sliding/full + YOCO + final norm).
zig_binary(
    name = "gemma4_prefill",
    main = "gemma4_prefill.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.6 — ZML logits (lm_head tied vocab complet + softcap 30) sur last_hidden validé ; top-1 vs oracle.
zig_binary(
    name = "gemma4_logits",
    main = "gemma4_logits.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.7 decode-1 — pilote decode incrémental (writer 13 × reader 15) : scatterSlices append + pos_idx.
zig_binary(
    name = "gemma4_decode1",
    main = "gemma4_decode1.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.7 — primitives decode isolées (scatterSlices + rope(pos)) : ferme la dette d'isolation de decode-1.
zig_binary(
    name = "gemma4_decprim",
    main = "gemma4_decprim.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.7 decode-2 — pilote decode FULL (writer 14 × reader 19) : head_dim 512 + manualRope(pos).
zig_binary(
    name = "gemma4_decode2",
    main = "gemma4_decode2.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.7 decode-3 — moteur decode e2e (35 couches, 1 token) -> logits == HF.
zig_binary(
    name = "gemma4_decode3",
    main = "gemma4_decode3.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# P5.7.8 — boucle de génération decode (N tokens) -> séquence == HF greedy.
zig_binary(
    name = "gemma4_decode4",
    main = "gemma4_decode4.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

zig_binary(
    name = "gemma4_hadq",
    main = "gemma4_hadq.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# Q3 — ZML MSE V-only quantizer chain (norm + Hadamard + nearest-centroid + inverse) vs oracle.
zig_binary(
    name = "gemma4_vquant",
    main = "gemma4_vquant.zig",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//zml",
    ],
)

# Q4 — ZML MOTEUR decode 1-step AVEC V-quant (MSE V-only) inséré au point cache ; decode == HF-V-quant.
zig_binary(
    name = "gemma4_decode_vq",
    main = "gemma4_decode_vq.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# Q5 — ZML BOUCLE génération decode AVEC V-quant (MSE V-only) ; séquence == HF-V-quant greedy.
zig_binary(
    name = "gemma4_gen_vq",
    main = "gemma4_gen_vq.zig",
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# E1 — non-régression socle modulaire : EngineModel(struct{}) == decode4 (P5.7.8).
# srcs OBLIGATOIRE : le runner @import("engine.zig") -> Bazel doit exposer le fichier au sandbox.
zig_binary(
    name = "gemma4_engine_e1",
    main = "gemma4_engine_e1.zig",
    srcs = ["engine.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# E2 — brique TurboQuant branchée sur le socle : EngineModel(TurboQuantVBrick) == gen_vq (POC sans copie).
zig_binary(
    name = "gemma4_engine_e2",
    main = "gemma4_engine_e2.zig",
    srcs = ["engine.zig", "brick_turboquant.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# L1a — replay génération longue : cache sliding LINÉAIRE (.k=L_MAX) + masque bande (two_masks, ring=false).
zig_binary(
    name = "gemma4_gen_long",
    main = "gemma4_gen_long.zig",
    srcs = ["engine.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# L1a CHUNKÉ (perf) — decode découpé en stages compilés séparément (compileFn), pic mémoire borné.
# Nom COURT (gchunk) : un nom de cible long déborde le quota comptime pjrt structSize (cf ENGINE_LOG 31 mai).
# R1 (instrumentation mémoire) : pic post-compile MESURÉ (mem_probe.zig) + RSS/swap par-step
# (caractérisation fuite) + knob comptime SYNC_EVERY (fréquence sync, défaut 1 = L1a exact).
zig_binary(
    name = "gemma4_gchunk",
    main = "gemma4_gchunk.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# L1a — CONTRE-TEST DE NON-VACUITÉ (R2) : rebind masks_sliding <- masks_full (fenêtre OFF) → attend
# divergence ~p=512 (prouve que le masque bande est consommé). PASS = divergence (critère inversé).
# Nom court (gchunk_vac) : quota comptime pjrt structSize (cf 31 mai / ENGINE_LOG).
zig_binary(
    name = "gemma4_gchunk_vacuity",
    main = "gemma4_gchunk_vacuity.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# Contre-test non-vacuité par LOGITS (rigoureux) : double forward (masque correct vs causal) + max_abs
# des logits. Tranche ce que l'argmax ne peut pas (greedy trop robuste). PASS = max_abs>0 à p>=512.
zig_binary(
    name = "gemma4_vacuity_logits",
    main = "gemma4_vacuity_logits.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# L1b — replay ring 512 + masque circulaire (chunké). Sur *_naive.safetensors = contre-test non-vacuité.
zig_binary(
    name = "gemma4_gchunk_ring",
    main = "gemma4_gchunk_ring.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# L2 — génération AUTONOME host-orchestrée (gather host → forwardStageStep → argmax → reinject).
zig_binary(
    name = "gemma4_gchunk_auto",
    main = "gemma4_gchunk_auto.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# G1 (P-GPU-1) — baseline fp32 sur GPU : force CUDA + timer tok/s + RSS. Calcul == L1a mono (PrecCfg défaut).
zig_binary(
    name = "gemma4_gen_long_gpu",
    main = "gemma4_gen_long_gpu.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# G2.2 : l'ex-runner gemma4_gen_long_gpu_bf16 (bras D comptime) a été SUPPRIMÉ après le PASS de
# la non-régression G2.3.0 — sa config est réexprimée par gemma4_g23_sweep
# "qkv_proj,qk_scores,pv_ctx,o_proj,mlp,ple,head" (ratios G2.2 reproduits : KL p50 0.271×,
# max_abs p50 0.436×, bifurcation 96 — manifest g2_3, 10 juil 2026).

# G2.3 — sweep sensibilité par famille : UN binaire, PrecRt par argv ("fam1,fam2" ou "none"),
# dump logits par step + --no-prealloc (mesure VRAM kv_store). Nom 16c < quota comptime pjrt.zig.
zig_binary(
    name = "gemma4_g23_sweep",
    main = "gemma4_g23_sweep.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)

# G8 — benchmark decode GPU (warmup + tok/s + sanity argmax==HF). VRAM via nvidia-smi.
zig_binary(
    name = "gemma4_bench",
    main = "gemma4_bench.zig",
    srcs = ["engine.zig", "mem_probe.zig"],
    visibility = ["//visibility:public"],
    deps = ["//bazel", "//zml"],
)
